# citric

./: .changie.yaml  .dockerignore  .flake8  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .isort.cfg  .limesurvey-docker-tags.json  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  .sonarcloud.properties  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  SECURITY.md  citric.sarif  docker-compose.email.yml  docker-compose.jupyter.yml  docker-compose.mysql.yml  docker-compose.ref.yml  docker-compose.test.yml  docker-compose.yml  justfile  mypy.ini  noxfile.py  pyproject.toml  (+7 more)
.changes/: 0.0.1.md  0.0.10.md  0.0.11.md  0.0.12.md  0.0.13.md  0.0.14.md  0.0.2.md  0.0.3.md  0.0.4.md  0.0.5.md  0.0.6.md  0.0.7.md  0.0.8.md  0.0.9.md  0.1.0.md  0.10.0-alpha.md  0.10.0.md  0.2.0.md  0.3.0.md  0.3.1.md  0.4.0.md  0.4.1.md  0.4.2.md  0.4.3.md  0.4.4.md  0.4.5.md  0.5.0.md  0.6.0.md  0.7.0.md  0.7.1-b1.md  0.7.1-b2.md  0.7.1-b3.md  0.7.1.md  0.7.2.md  0.7.3+post1.md  0.7.3.md  0.8.0-b1.md  0.8.0.md  0.9.0.md  1.0.0-rc1.md  (+17 more)
.changes/unreleased/: Added-20220415-210648.yaml  Added-20220416-140302.yaml  Added-20220430-124451.yaml  Added-20220501-231940.yaml  Added-20220619-204107.yaml  Added-20220629-031541.yaml  Added-20220629-031736.yaml  Added-20221024-192157.yaml  Added-20221025-182249.yaml  Added-20230310-005439.yaml  Added-20230310-005502.yaml  Added-20230314-053859.yaml  Added-20230320-194148.yaml  Added-20230804-224519.yaml  Added-20230823-121334.yaml  Added-20230920-033626.yaml  Added-20231002-092130.yaml  Added-20231028-222932.yaml  Added-20231109-165350.yaml  Added-20240117-233210.yaml  Added-20240208-002559.yaml  Added-20240528-231314.yaml  Added-20240921-220814.yaml  Added-20241008-111016.yaml  Added-20241112-183538.yaml  Added-20241226-180149.yaml  Added-20250301-233725.yaml  Added-20250418-121731.yaml  Added-20250418-122240.yaml  Added-20250512-210219.yaml  Added-20251015-103335.yaml  Added-20251017-004142.yaml  Added-20251017-011917.yaml  Added-20260222-000000.yaml  Added-20260602-210914.yaml  Added-20260603-122642.yaml  Added-20260612-185322.yaml  Added-20260613-122908.yaml  Changed-20221118-154715.yaml  Changed-20221215-004844.yaml  (+65 more)
.circleci/: config.yml
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yaml  FUNDING.yml  ISSUE_TEMPLATE.md  default_tags.json  dependabot.yml  include_tags.json  pull_request_template.md  renovate.json5  semantic.yml  tags.json  zizmor.yml
.github/ISSUE_TEMPLATE/: BUG.yml  feature.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: api-changes.yml  build.yml  codeql-analysis.yml  compose.yml  constraints.txt  coverage.yml  coverdage.yml  gen-release-pr.yml  gha-update.yml  install-tools.yml  integration.yml  limesurvey-tags.yml  pr-preview-links.yml  release.yml  sarif.yaml  scorecard.yml  tests.yml  update-tags.yml  zizmor.yml
.trunk/: trunk.yaml
assets/badge/: badge-integration-3.11-5-apache-postgres.json  badge-integration-3.11-5.6.33-230808-apache-postgres.json  badge-integration-3.11-5.6.34-230816-apache-postgres.json  badge-integration-3.11-5.6.35-230822-apache-postgres.json  badge-integration-3.11-5.6.37-230905-apache-postgres.json  badge-integration-3.11-5.6.38-230919-apache-postgres.json  badge-integration-3.11-6.2.2-230814-apache-postgres.json  badge-integration-3.11-6.2.3-230821-apache-postgres.json  badge-integration-3.11-6.2.4-230825-apache-postgres.json  badge-integration-3.11-6.2.8-230921-apache-postgres.json  badge-integration-3.11-refs-heads-5.x-postgres.json  badge-integration-3.11-refs-heads-develop-postgres.json  badge-integration-3.12-5-apache-postgres.json  badge-integration-3.12-5.6.35-230822-apache-postgres.json  badge-integration-3.12-5.6.37-230905-apache-postgres.json  badge-integration-3.12-5.6.38-230919-apache-postgres.json  badge-integration-3.12-6-apache-mysql.json  badge-integration-3.12-6.2.6-230904-apache-postgres.json  badge-integration-3.12-6.2.7-230918-apache-postgres.json  badge-integration-3.12-6.2.8-230921-apache-postgres.json  badge-integration-3.12-refs-heads-5.x-postgres.json  badge-integration-3.12-refs-heads-master-postgres.json  badge-integration-3.8-6-apache-postgres.json  badge-integration-3.9-6-apache-postgres.json  badge-integration-pypy3.10-6-apache-postgres.json
code_samples/: auth_plugin.py  citric.R  context_manager.py  custom_requests_session.py  duckdb_sql.py  get_surveys.py  import_question.py  pandas_df.py  requests_session_attributes.py  reticulate.py  ruff.toml  session_attr.py  update_question_answer_rest.py  upload_s3.py  uploaded_files.py  uploaded_to_response.py
docs/: api_coverage.md  conf.py  deprecations.md  examples.md  how-to.md  index.md  index.rst  reference.rst  requirements.txt  rest_coverage.md  rpc_coverage.md
docs/_ext/: limesurvey_develop.py  limesurvey_future.py  limesurvey_unreleased.py  minlimesurvey.py
docs/_partial/: tags.md
docs/contributing/: docker.md  docs.md  environment.md  getting-started.md  index.md  new-limesurvey-features.md  release.md  testing.md  unreleased-features.md  update-dependencies.md  (+1 more)
examples/: answers.lss  free_text.lsq  group.lsg  limesurvey_survey_432535.lss  survey.lss
limette/: __init__.py  exceptions.py  rpc.py
notebooks/: import_s3.ipynb  parse_files.ipynb  tryit.ipynb
requirements/: docs.requirements.txt  requirements-ci.in  requirements-ci.txt  requirements-docs.txt  requirements-highest.txt  requirements-lowest-direct.txt  requirements-test.txt  requirements-typing.txt
scripts/: docker_tags.py  gen_integration_results_table.py  integration_results.py  update_integration_status.py
source/: conf.py  index.rst
src/citric/: _util.py  (+16 more)
tests/: __init__.py  compose.git-ref.yaml  compose.mysql.yaml  compose.yaml  conftest.py  docker-compose.yml  fixtures.py  test_api.py  test_client.py  test_compat.py  test_integration.py  test_limette.py  test_objects.py  test_rest.py  test_rpc.py  test_spec.py  test_survey.py
(+33 files in other folders)
