[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "citric"
description = "A client to the LimeSurvey Remote Control API 2, written in modern Python."
readme = "README.md"
keywords = [
  "json-rpc",
  "limesurvey",
]
license = {file = "LICENSE"}
maintainers = [{ name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }]
authors = [{ name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "requests>=2.23",
]
optional-dependencies.dev = [
  "citric[docs,tests,typing]",
  "colorama>=0.4.6",
  "requests-cache>=1.1",
]
optional-dependencies.docs = [
  "autodocsumm>=0.2.5", # 0.2.4 has a problematic dependency 'Sphinx>=2.2.*'
  "furo",
  "myst-parser",
  "sphinx",
  "sphinx-autoapi",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinx-hoverxref",
  "sphinx-notfound-page",
  "sphinx-toolbox>=3.5",
]
optional-dependencies.tests = [
  "coverage[toml]>=7.4",
  "deptry>=0.12",
  "faker>=19",
  "pytest>=7.3.1",
  "pytest-github-actions-annotate-failures>=0.1.7",
  "pytest-httpserver",
  "pytest-reverse",
  "pytest-subtests",
  "python-dotenv>=1",
  "semver>=3.0.1",
  "tinydb>=4.8",
  "xdoctest[colors]>=1.1.1",
]
optional-dependencies.typing = [
  "citric[tests]",
  "mypy>=1.8",
  "sphinx",
  "types-requests>=2.31.0.2",
  'typing-extensions>=4.6; python_version < "3.12"',
]
urls.Documentation = "https://citric.readthedocs.io"
urls.Homepage = 'https://github.com/edgarrmondragon/citric'
urls."Issue Tracker" = "https://github.com/edgarrmondragon/citric/issues"
urls.Repository = "https://github.com/edgarrmondragon/citric"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
line-length = 88
src = ["src", "tests", "docs"]
target-version = "py38"

[tool.ruff.lint]
explicit-preview-rules = false
ignore = [
  "ANN101",  # missing-type-self
  "DJ",      # flake8-django
  "FIX002",  # line-contains-todo
  "COM812",  # missing-trailing-comma
  "ISC001",  # single-line-implicit-string-concatenation
  "D107",    # undocumented-public-init
]
preview = true
select = [
  "F",       # Pyflakes
  "E",       # pycodestyle (error)
  "W",       # pycodestyle (warning)
  "C90",     # mccabe
  "I",       # isort
  "N",       # pep8-naming
  "D",       # pydocstyle
  "UP",      # pyupgrade
  "YTT",     # flake8-2020
  "ANN",     # flake8-annotations
  "S",       # bandit
  "BLE",     # flake8-blind-except
  "FBT",     # flake8-boolean-trap
  "B",       # flake8-bugbear
  "A",       # flake8-builtins
  "COM",     # flake8-commas
  "C4",      # flake8-comprehensions
  "DTZ",     # flake8-datetimez
  "T10",     # flake8-debugger
  "EM",      # flake8-errmsg
  "FA",      # flake8-future-annotations
  "ISC",     # flake8-implicit-str-concat
  "ICN",     # flake8-import-conventions
  "G",       # flake8-logging-format
  "INP",     # flake8-no-pep420
  "PIE",     # flake8-pie
  "T20",     # flake8-print
  "PT",      # flake8-pytest-style
  "Q",       # flake8-quotes
  "RSE",     # flake8-raise
  "RET",     # flake8-return
  "SLF",     # flake8-self
  "SLOT",    # flake8-slots
  "SIM",     # flake8-simplify
  "TID",     # flake8-tidy-imports
  "TCH",     # flake8-type-checking
  "ARG",     # flake8-unused-arguments
  "PTH",     # flake8-use-pathlib
  "TD",      # flake8-todos
  "FIX",     # flake8-fixme
  "ERA",     # flake8-eradicate
  "PD",      # pandas-vet
  "PGH",     # pygrep-hooks
  "PLC",     # pylint
  "PLE",     # pylint
  "PLR",     # pylint
  "PLW",     # pylint
  "TRY",     # tryceratops
  "FLY",     # flynt
  "PERF",    # perflint
  "FURB",    # refurb
  "LOG",     # flake8-logging
  "RUF",     # Ruff-specific rules
]
unfixable = [
  "ERA", # Don't remove commented out code
]

[tool.ruff.format]
docstring-code-format = true
# Enable preview style formatting.
preview = true

[tool.ruff.lint.per-file-ignores]
"docs/notebooks/*" = [
  "D100",   # undocumented-public-module
  "INP001", # implicit-namespace-package
  "I002",   # missing-required-import
  "E402",   # module-import-not-at-top-of-file
]
"src/*" = [
  "PD", # pandas-vet
]
"tests/*" = [
  "ARG00",   # unused-method-argument
  "C901",    # complex-structure
  "S101",    # assert
  "S105",    # hardcoded-password-string
  "S106",    # hardcoded-password-func-arg
  "ANN201",  # missing-return-type-undocumented-public-function
  "PLR2004", # magic-value-comparison
  "SLF001",  # private-member-access
  "PLR6301", # no-self-use
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-errmsg]
max-string-length = 30

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["typing"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
typing = "t"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["citric"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10

[tool.codespell]
skip = ".mypy_cache,.nox,.ruff_cache,build,docs/index.md,docs/requirements.txt"

[tool.deptry.package_module_name_map]
types-requests = "requests"
typing-extensions = "typing_extensions"

[tool.deptry.per_rule_ignores]
DEP002 = [
  "autodocsumm",
  "colorama",
  "coverage",
  "deptry",
  "faker",
  "furo",
  "mypy",
  "myst-parser",
  "pytest",
  "pytest-github-actions-annotate-failures",
  "pytest-httpserver",
  "pytest-reverse",
  "pytest-subtests",
  "python-dotenv",
  "requests-cache",
  "semver",
  "sphinx",
  "sphinx-autoapi",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinx-hoverxref",
  "sphinx-notfound-page",
  "sphinx-toolbox",
  "tinydb",
  "xdoctest",
]
DEP004 = [
  "typing_extensions",
]

[tool.pytest.ini_options]
addopts = [
  "-vvv",
  "--reverse",
]
filterwarnings = [
  "error",
  "default::citric._compat.FutureVersionWarning",
  "always::citric._compat.CitricDeprecationWarning",
]
markers = [
  "integration_test: Integration and end-to-end tests",
  "xfail_mysql: Mark a test as expected to fail on MySQL",
]

[tool.coverage.paths]
package = [
  "src/citric/",
  "*/site-packages/citric/",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["citric"]
relative_files = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", '''if (t\.)?TYPE_CHECKING:''']
fail_under = 85
omit = ["src/citric/types.py"]
precision = 2
show_missing = true

[tool.tox]
legacy_tox_ini = """
    [tox]
    requires =
        tox>=4
    env_list = py{38,39,310,311,312,313}
"""

[tool.mypy]
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "nox.*",
  "pytest_subtests.*",  # TODO: Remove after https://github.com/pytest-dev/pytest-subtests/pull/115 is published
]
